# spark_course

./: .gitignore  .pre-commit-config.yaml  notes.md  pyproject.toml
6_exercises/: exercise_1.py  notes.md  warm_up_1.py  warm_up_2.py
exercises/: exercise_1.py  exercise_2.py  exercise_3.py  exercise_4.py  notes.md  warm_up_1.py  warm_up_2.py
slides/: 01_introduction.md  02_running_pyspark.md  03_joins.md  04_salted_key_join.md  05_window_functions.md  06_udf.md  07_rdd.md  08_performance.md  09_etc.md  09_hadoop.md
solutions/: 01_wordcount.py  02_rdd_to_df.py  03_performance.py  04_etc.py  exercise_1.py  exercise_2.py  exercise_3.py  exercise_4.py  exercise_5.py  warm_up_1.py  warm_up_2.py
