[tool.poetry]
name = "spark-course"
version = "0.1.0"
description = ""
authors = ["Wim van der Ham <wfjvdham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
tqdm = "^4.66.2"
pre-commit = "^3.7.0"
pyspark = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
